tests/tests/snapshots/ts_client__typed-video.snap
---
source: tests/tests/ts_client.rs
expression: dump
---
============================================================
clients/ts/package.json
============================================================
{
  "name": "media-client",
  "version": "0.1.0",
  "private": true,
  "type": "module",
  "main": "src/index.ts",
  "types": "src/index.ts",
  "scripts": {
    "typecheck": "tsc --noEmit"
  },
  "devDependencies": {
    "typescript": "^5.4.0"
  }
}
============================================================
clients/ts/tsconfig.json
============================================================
{
  "compilerOptions": {
    "target": "ES2020",
    "module": "ESNext",
    "moduleResolution": "bundler",
    "strict": true,
    "declaration": true,
    "outDir": "dist",
    "rootDir": "src",
    "lib": ["ES2020", "DOM"]
  },
  "include": ["src"]
}
============================================================
clients/ts/src/types.ts
============================================================
// Generated by CIaC. Record and CRUD schemas from the program's IR.

/** Every `api` route wraps its pipeline's result in this envelope. */
export interface Envelope<T> {
  status: string;
  data: T;
}

export interface ClipIn {
  title: string;
  duration_s: number;
  status: VideoStatus;
}

export interface ClipOut {
  id: string;
  title: string;
  duration_s: number;
  status: VideoStatus;
}

export interface Video {
  id: string;
  title: string;
  duration_s: number;
  status: VideoStatus;
}

export type VideoStatus = "Pending" | "Ready" | "Failed";

============================================================
clients/ts/src/client.ts
============================================================
// Generated by CIaC. One function per route; scope-bearing routes
// require `AuthenticatedClientOptions` so a missing token is a
// compile error, not a 401 at runtime.
import type * as Types from "./types";

export interface ClientOptions {
  baseUrl: string;
}

export interface AuthenticatedClientOptions extends ClientOptions {
  token: string;
}

function authHeader(opts: ClientOptions): Record<string, string> {
  const token = (opts as Partial<AuthenticatedClientOptions>).token;
  return token ? { Authorization: `Bearer ${token}` } : {};
}

async function request<T>(
  opts: ClientOptions,
  path: string,
  method: string,
  body?: unknown,
): Promise<T> {
  const headers: Record<string, string> = { ...authHeader(opts) };
  if (body !== undefined) {
    headers["Content-Type"] = "application/json";
  }
  const res = await fetch(`${opts.baseUrl}${path}`, {
    method,
    headers,
    body: body === undefined ? undefined : JSON.stringify(body),
  });
  if (!res.ok) {
    throw new Error(`${method} ${path} failed: ${res.status}`);
  }
  if (res.status === 204) {
    return undefined as T;
  }
  return (await res.json()) as T;
}

export async function upload(opts: AuthenticatedClientOptions, payload: Types.Video): Promise<Types.Envelope<Types.Video>> {
  return request(opts, "/upload", "POST", payload);
}

export async function createClip(opts: AuthenticatedClientOptions, payload: Types.ClipIn): Promise<Types.ClipOut> {
  return request(opts, "/clips", "POST", payload);
}

export async function listClips(opts: AuthenticatedClientOptions, params?: { limit?: number; offset?: number }): Promise<Types.ClipOut[]> {
  const q = new URLSearchParams();
  if (params?.limit !== undefined) q.set("limit", String(params.limit));
  if (params?.offset !== undefined) q.set("offset", String(params.offset));
  const qs = q.toString();
  return request(opts, qs ? `/clips?${qs}` : "/clips", "GET");
}

export async function getClip(opts: AuthenticatedClientOptions, id: string): Promise<Types.ClipOut> {
  return request(opts, `/clips/{}`.replace("{}", encodeURIComponent(id)), "GET");
}

export async function updateClip(opts: AuthenticatedClientOptions, id: string, payload: Types.ClipIn): Promise<Types.ClipOut> {
  return request(opts, `/clips/{}`.replace("{}", encodeURIComponent(id)), "PUT", payload);
}

export async function deleteClip(opts: AuthenticatedClientOptions, id: string): Promise<void> {
  return request(opts, `/clips/{}`.replace("{}", encodeURIComponent(id)), "DELETE");
}

============================================================
clients/ts/src/index.ts
============================================================
export * from "./types";
export * from "./client";
============================================================
clients/ts/README.md
============================================================
# Generated TypeScript client

Dependency-free (uses the global `fetch`) — generated by `ciac build
--client ts` straight from the program's IR, the same source every
backend renders from. Routes that require auth take
`AuthenticatedClientOptions` instead of `ClientOptions`, so a missing
token is a compile error rather than a 401 at runtime.

```ts
import { createNote, type NoteIn } from "./src";

const opts = { baseUrl: "http://localhost:8000", token: "..." };
const note = await createNote(opts, { title: "hi" } satisfies NoteIn);
```

Run `npm run typecheck` (after `npm install`) to type-check the
package on its own.
